# polarisagi-harness

./: .gitignore  .golangci.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  code_review_report.md  go.mod  go.sum
.github/workflows/: benchmark.yml  ci.yml  constitutional-review.yml
api/proto/: blackboard.proto  event.proto  mutation.proto
benchmark/routing/: golden_set.yaml  providers.yaml
cmd/polaris/: benchmark.go  cli.go  cli_i18n.go  main.go  migrate_openclaw.go  migrate_openclaw_memory.go  process_staging.go
configs/: defaults.toml  defaults.yaml  embed.go  loader.go  marketplaces.yaml  seed_tasks.yaml  trusted-publishers.yaml
configs/agents/: plugin_creator.yaml
configs/prompts/: identity.md  system_prompt.md
configs/threshold-examples/: m10_knowledge.toml  m11_policy.toml  m12_eval.toml  m13_interface.toml  m1_router.toml  m2_storage.toml  m3_observability.toml  m4_kernel.toml  m5_memory.toml  m6_skill.toml  m7_tool.toml  m8_orchestrator.toml  m9_self_improve.toml
docs/arch/: 00-Global-Dictionary.md  ARCHITECTURE.md  (+17 more)
policies/: ESCALATE.md  KILLSWITCH.md  hard_constraints.cedar  soft_constraints.cedar
rust/substrate/: Cargo.toml
rust/substrate/src/: lib.rs  surreal_tier1.rs
scripts/: README.md  build_skill.sh  build_skills.sh  constitutional_review.sh  gen_threshold_examples.go  generate_impl.sh  generate_manifest.go  restart.sh  sync_doc_toc.go
tools/: gen_threshold_examples.go  generate_manifest.go  sync_doc_toc.go
web/: embed.go  package-lock.json  package.json  vite-plugin-fragments.js  vite.config.js
(+600 files in other folders)
